--- a/Readme/Readme
+++ b/Readme/Readme
@@ -1,1 +1,1 @@
-Please Master selection and Readme in every folder for easy understanding
+Please use Master selection and Readme in every folder for easy understanding
